# parse-kotlin-data-class

./: Cargo.toml
ron/src/: parse.rs
ron/src/de/: mod.rs
src/: main.rs
