[package]
name = "kotlin-data-class"
version = "0.1.0"
edition = "2018"

[workspace]
members = [".", "ron"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bitflags = "1"
eyre = "0.6"
patched_ron = { package = "ron", path = "ron" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1"
